--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,7 +2,7 @@
 -<html lang="en-us">
 -  <head>
 -    <meta charset="UTF-8">
--    <title>My-go-examples by JeffDeCola</title>
+-    <title>{{ page.title }}</title>
 -    <meta name="viewport" content="width=device-width, initial-scale=1">
 -    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
 -    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -19,10 +19,8 @@
 -    </section>
 -
 -    <section class="main-content">
--      <h1>
--<a id="my-go-examples" class="anchor" href="#my-go-examples" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>WelcomeALL</h1>
---
- +			{{ content }} 
+-      
+	    {{ content }} 
 
 -      <footer class="site-footer">
 -        <span class="site-footer-owner"><a href="https://github.com/JeffDeCola/my-go-examples">My-go-examples</a> is maintained by <a href="https://github.com/JeffDeCola">JeffDeCola</a>.</span>
