--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,7 +11,7 @@
 -  </head>
 -  <body>
 -    <section class="page-header">
--      <h1 class="project-name">My-go-examples</h1>
+-      <h1 class="project-name">{{project-name}}</h1>
 -      <h2 class="project-tagline">A place to keep my go code snippets and examples.</h2>
 -      <a href="https://github.com/JeffDeCola/my-go-examples" class="btn">View on GitHub</a>
 -      <a href="https://github.com/JeffDeCola/my-go-examples/zipball/master" class="btn">Download .zip</a>
