--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
     <section class="page-header">
       <h1 class="project-name">{{ page.projectname }}</h1>
       <h2 class="project-tagline">{{ page.summary }}</h2>
-      <a href="https://github.com/JeffDeCola/"{{ page.projectname }} class="btn">View on GitHub</a>
+      <a href="https://github.com/JeffDeCola/{{ page.projectname }}" class="btn">View on GitHub</a>
       <a href="https://github.com/JeffDeCola/my-go-examples/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/JeffDeCola/my-go-examples/tarball/master" class="btn">Download .tar.gz</a>
     </section>
