--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
-    <meta http-equiv="refresh" content="0;url=README.md">
+   /* <meta http-equiv="refresh" content="0;url=README.md"> */
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
