--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,7 +4,6 @@
   <head>
     <meta charset="UTF-8">
     <title>{{ page.title }}</title>
-    <!-- <meta http-equiv="refresh" content="0;url=README.md"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -17,6 +16,7 @@
     <section class="page-header">
       <h1 class="project-name">{{ page.projectname }}</h1>
       <h2 class="project-tagline">{{ page.summary }}</h2>
+      <a href="https://jeffdecola.github.io" class="btn">Home Page</a>
       <a href="https://github.com/JeffDeCola/{{ page.projectname }}" class="btn">View on GitHub</a>
       <a href="https://github.com/JeffDeCola/{{ page.projectname }}/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/JeffDeCola/{{ page.projectname }}/tarball/master" class="btn">Download .tar.gz</a>
